lang/tests/compile_fail/seeds_raw_on_account.stderr
error: unknown key-value directive `seeds = ...`
  --> tests/compile_fail/seeds_raw_on_account.rs:13:15
   |
13 |     #[account(seeds = [b"config"], bump = config.bump)]
   |               ^^^^^
